segunda pre-entrega

--- a/src/Components/ItemList/styles.css
+++ b/src/Components/ItemList/styles.css
@@ -6,6 +6,29 @@
     justify-items: center;
 }
 
+.producto__content-title > h1 {
+    font-size: 1.5rem;
+    margin: .45rem 0;
+}
+
+.producto__content-img > h4 {
+    font-size: 1rem;
+    font-weight: 300;
+    margin-bottom: .5rem;
+}
+
+.producto__content-img > p {
+    font-size: 1.5rem;
+    margin-bottom: .5rem;
+}
+
+.producto__content-img .stock {
+    font-size: .8rem;
+    color: var(--grey);
+    margin-bottom: .5rem;
+}
+
+
 .producto__content-img {
     text-align: center;
 }
@@ -15,15 +38,14 @@
     letter-spacing: .15rem;
     text-transform: uppercase;
     color: var(--black);
-    margin-top: 2rem;
     border: 2px solid var(--black);
     padding: .5rem 1.5rem;
     cursor: pointer;
 }
 
 .producto__content-img button:hover {
-    background-color: var(--white);
-    color: var(--black);
+    background-color: var(--black);
+    color: var(--white);
 }
 
 @media screen and (max-width: 800px) {
