--- a/src/Components/ItemListContainer/styles.css
+++ b/src/Components/ItemListContainer/styles.css
@@ -3,8 +3,8 @@
 }
 
 .producto > h1 {
-    font-size: 3rem;
-    margin: 2rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
     text-align: center;
 }
 
